[gd_scene load_steps=9 format=3 uid="uid://7rb3i4beds2o"]

[ext_resource type="Texture2D" uid="uid://e568eei14de2" path="res://graphics/invader_bullet_animated/invader_bullet_animated1.png" id="1_bkrpn"]
[ext_resource type="Script" uid="uid://dd0euk2oe85aj" path="res://scenes/space_invaders/space_invader_bullet.gd" id="1_n0jcr"]
[ext_resource type="Texture2D" uid="uid://b53tn2wijom35" path="res://graphics/invader_bullet_animated/invader_bullet_animated2.png" id="2_n0jcr"]
[ext_resource type="Texture2D" uid="uid://bpwe0tw7tifa8" path="res://graphics/invader_bullet_animated/invader_bullet_animated3.png" id="3_br6ch"]
[ext_resource type="Texture2D" uid="uid://b4dqnjaqmewnw" path="res://graphics/invader_bullet_animated/invader_bullet_animated4.png" id="4_x70fk"]
[ext_resource type="Texture2D" uid="uid://di0ypsiv36mla" path="res://graphics/invader_bullet_animated/invader_bullet_animated5.png" id="5_kvmtd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5sxrg"]
size = Vector2(20, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_06n63"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_bkrpn")
}, {
"duration": 1.0,
"texture": ExtResource("2_n0jcr")
}, {
"duration": 1.0,
"texture": ExtResource("3_br6ch")
}, {
"duration": 1.0,
"texture": ExtResource("4_x70fk")
}, {
"duration": 1.0,
"texture": ExtResource("5_kvmtd")
}],
"loop": false,
"name": &"explode",
"speed": 5.0
}]

[node name="SpaceInvaderBullet" type="Area2D"]
scale = Vector2(0.2, 0.2)
collision_layer = 4
collision_mask = 11
script = ExtResource("1_n0jcr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5sxrg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_06n63")
animation = &"explode"

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
